feat: revisao p1